Wed Jul 22 20:42:52 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: define IPPROTO_IPV6 macro for recent Windows
	  SDK.

Wed Jul 22 19:32:10 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/mkconstants.rb: define IPV6_* constants only when INET6
	  is defined.

Wed Jul 22 19:23:04 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: ipv6 support is disabled by default on mswin.

Wed Jul 22 17:41:08 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/ipsocket.c (init_inetsock_internal): drop IPv6 addresses
	  if INET6 is not defined.

Wed Jul 22 17:29:59 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: enable ipv6 support for win32.

Wed Jul 22 16:38:39 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* hash.c (Hash::[]): rdoc. patch by Marc-Andre Lafortune.
	  #1385.

Wed Jul 22 10:00:53 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (WSABUF): get rid of compile error on VC9 and mingw.

Wed Jul 22 02:33:57 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/irb.rb: forget svn commit.

Wed Jul 22 01:20:54 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bootstraptest/test_io.rb: block write may block for long time.

Wed Jul 22 00:34:39 2009  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb.rb, lib/irb/init.rb, lib/irb/ext/save-history.rb: add
	  IRB::irb_at_exit. no use finalizer saving history. [ruby-dev-38563]

Tue Jul 21 23:47:38 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* random.c (rand_init): array length of random seed was broken, which
	  causes memory error with srand(2**1000000-1).

	* test/ruby/test_rand.c: test for above.

Tue Jul 21 21:37:19 2009  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb/cmd/help.rb: fixed irb's "help" command. [ruby-core:22310].


	* lib/tracer.rb: no show lines unkonwn line number. [ruby-core:22096],
          no trace display  c-call and c-return as default.

Tue Jul 21 16:24:41 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>
