@@ -21,7 +21,7 @@ typedef enum {
     NOEX_UNDEF     = NOEX_NOSUPER,
     NOEX_MODFUNC   = 0x12,
     NOEX_SUPER     = 0x20,
-    NOEX_VCALL     = 0x40,
+    NOEX_VCALL     = 0x40
 } rb_method_flag_t;
 
 #define NOEX_SAFE(n) ((int)((n) >> 8) & 0x0F)
@@ -39,7 +39,7 @@ typedef enum {
     VM_METHOD_TYPE_ZSUPER,
     VM_METHOD_TYPE_UNDEF,
     VM_METHOD_TYPE_NOTIMPLEMENTED,
-    VM_METHOD_TYPE_OPTIMIZED, /* Kernel#send, Proc#call, etc */
+    VM_METHOD_TYPE_OPTIMIZED /* Kernel#send, Proc#call, etc */
 } rb_method_type_t;
 
 typedef struct rb_method_cfunc_struct {
@@ -62,7 +62,7 @@ typedef struct rb_method_entry_struct {
 	VALUE proc;
 	enum method_optimized_type {
 	    OPTIMIZED_METHOD_TYPE_SEND,
-	    OPTIMIZED_METHOD_TYPE_CALL,
+	    OPTIMIZED_METHOD_TYPE_CALL
 	} optimize_type;
     } body;
     int alias_count;
