@@ -367,7 +367,9 @@ vm_call_cfunc(rb_thread_t *th, rb_control_frame_t *reg_cfp,
     EXEC_EVENT_HOOK(th, RUBY_EVENT_C_CALL, recv, id, klass);
 
     TH_PUSH_TAG(th);
+#if defined(__cplusplus) || (__STDC_VERSION__ >= 199901L)
     // TODO: fix me.  separate event
+#endif
     if (th->event_flags & RUBY_EVENT_C_RETURN) {
 	state = TH_EXEC_TAG();
     }
